# IA-32-Prep

./: .gitignore  CMakeLists.txt  README.md
32bit_real_mode/: CMakeLists.txt  sections.s  user_proj.asm
IA-32_Prepare/: CMakeLists.txt  sections.s  user_proj.s
